spec/glyph.ebnf
program       ::= ws? goal? ctx? flow+ ws?
goal         ::= "goal" ws string ws
ctx          ::= "ctx" ws "{" ws object_entries? "}" ws
flow         ::= "flow" ws identifier ws "{" ws statement* "}" ws
statement    ::= tool_call | repair_block
tool_call    ::= primitive ws? "(" ws? call_args? ws? ")" assignment? ws
assignment   ::= ws "->" ws identifier
repair_block ::= "repair" ws identifier ws "with" ws identifier ws "max" ws integer ws "{" ws statement* "}" ws
call_args    ::= call_arg (ws? "," ws? call_arg)*
call_arg     ::= (identifier ws? "=" ws?)? expression
expression   ::= string | number | boolean | array | object | ctx_ref | var_ref
array        ::= "[" ws? (expression (ws? "," ws? expression)*)? ws? "]"
object       ::= "{" ws? object_entries? ws? "}"
object_entries ::= object_entry (ws? ","? ws object_entry)* ","?
object_entry ::= object_key ws? ":" ws? expression
object_key   ::= identifier | string
ctx_ref      ::= "ctx" ("." identifier)+
var_ref      ::= identifier
primitive    ::= "SPEC" | "PLAN" | "GEN" | "CHECK" | "FIX" | "PATCH" | "SUM" | "SUMMARIZE" | "ASK" | "EXPORT" | "RUN" | "READ" | "WRITE"
boolean      ::= "true" | "false"
integer      ::= "-"? digit+
number       ::= "-"? digit+ ("." digit+)?
identifier   ::= alpha (alpha | digit | "_")*
string       ::= '"' (escape | string_char)* '"'
escape       ::= "\\" ('"' | "\\" | "n" | "r" | "t")
string_char  ::= any character except '"' or "\\"
alpha        ::= "A".."Z" | "a".."z" | "_"
digit        ::= "0".."9"
ws           ::= (" " | "\t" | "\r" | "\n" | comment)+
comment      ::= "#" any character except newline* ("\n" | end)
